syntax = "proto3";

package scalekit.v1.events;

import "buf/validate/validate.proto";
import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/scalekit-inc/scalekit/pkg/grpc/events";

message Event {
  string id = 1 [(buf.validate.field).string = {
    min_len: 1,
    max_len: 32
  }];
  EventType type = 2;
  google.protobuf.Timestamp create_time = 3;
  Actor actor = 4;
  string trace_context = 5;
  string source = 6;
  string request_id = 7;
  reserved 8 to 10;
  google.protobuf.Any payload = 11;
  google.protobuf.Any previous_payload = 12;

  message Actor {
    string environment_id = 1;
    string organization_id = 2;
    string user_id = 3;
    UserType user_type = 4;
    string ip_addr = 5;
    string user_agent = 6;
    enum UserType {
      USER_TYPE_UNSPECIFIED = 0;
      USER_TYPE_HUMAN = 1;
      USER_TYPE_MACHINE = 2;
    }
  }
}

enum EventType {
  EVENT_TYPE_UNSPECIFIED = 0;
  reserved 1 to 10;
  ORGANIZATION_CREATE = 11;
}
